--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
   }
   body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.015)),
-      url(../images/image-hero-desktop.jpg);
+      url(./images/image-hero-desktop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
